# bittorrent-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  notes.md  parsed.json  peers.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  release.yml
docs/: DEVELOPMENT.md
examples/: README.md
examples/basic-client/: Cargo.toml  main.rs
src/: announce.rs  lib.rs  main.rs
src/announce/: announce.rs  client.rs  error.rs  mod.rs  params.rs  response.rs  tests.rs
src/bencode/: cursor.rs  error.rs  helpers.rs  mod.rs  parser.rs  tests.rs
src/infohash/: error.rs  mod.rs
src/metainfo/: error.rs  helpers.rs  mod.rs
src/peer_protocol/: connection.rs  error.rs  mod.rs
tests/integration/: basic_workflow.rs
