[package]
name = "bittorrent-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
sha1 = "0.10.6"
reqwest = { version = "0.12.23", features = ["blocking"] }
urlencoding = "2.1.3"
url = "2.5.4"
bytes = "1"
