[package]
name = "bittorrent-rust"
version = "0.1.0"
edition = "2024"
description = "A minimal BitTorrent client implementation in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/bittorrent-rust"
keywords = ["bittorrent", "p2p", "torrent", "client"]
categories = ["network-programming", "web-programming::http-client"]

[[example]]
name = "basic-client"
path = "examples/basic-client/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
sha1 = "0.10.6"
reqwest = { version = "0.12.25", features = ["blocking"] }
urlencoding = "2.1.3"
url = "2.5.4"
bytes = "1"
